<resources>
    <string name="app_name">A1_SMD</string>

    <string name="cine_text_splash">Cine</string>
    <string name="fast_text_splash">FAST</string>

    <string name="get_started_text">Get Started</string>
    <string name="title_text">Explore now</string>
    <string name="subtitle_text">to experience the benefits</string>

    <string name="now_showing_text">Now Showing</string>
    <string name="select_date_text">Select Date</string>
    <string name="today_text">Today</string>
    <string name="tomorrow_text">Tomorrow</string>
    <string name="book_seats_text">Book Seats</string>
    <string name="trailer_text">▶ Trailer</string>

    <string name="movie_1_title">The Godfather</string>
    <string name="movie_2_title">The Godfather Part II</string>
    <string name="movie_3_title">The Godfather Part III</string>
    <string name="movie_4_title">The Usual Suspects</string>
    <string name="movie_5_title">Demon Slayer: Infinity Castle</string>

    <string name="movie_1_desc">The Godfather Poster</string>
    <string name="movie_2_desc">The Godfather II Poster</string>
    <string name="movie_3_desc">The Godfather III Poster</string>
    <string name="movie_4_desc">The Usual Suspects Poster</string>
    <string name="movie_5_desc">Demon Slayer Poster</string>

    <string name="movie_1_details">Crime / 175 min</string>
    <string name="movie_2_details">Crime / 202 min</string>
    <string name="movie_3_details">Crime / 162 min</string>
    <string name="movie_4_details">Thriller / 106 min</string>
    <string name="movie_5_details">Anime / 155 min</string>

    <string name="proceed_to_snacks">Proceed to Snacks</string>
    <string name="total_label">Total: PKR %1$d</string>
    <string name="seats_selected_label">%1$d seat(s) selected</string>
    <string name="seat_booked_label">Booked</string>
    <string name="seat_yours_label">Yours</string>
    <string name="seat_available_label">Available</string>
    <string name="theater_name">Cue Cinemas</string>
    <string name="hall_name">7</string>
    <string name="show_date">15.02.2026</string>
    <string name="show_time">21:00</string>
    <string name="screen_label">Screen</string>
    <string name="badge_13">+13</string>
    <string name="badge_en">EN</string>
    <string name="badge_screenx">Screen X</string>
    <string name="booking_confirmed">Booking Confirmed!</string>
    <string name="select_at_least_one_seat">Please select at least one seat!</string>
    <string name="theater_label">Theater</string>
    <string name="hall_label">Hall</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="screen_number">Screen X</string>
    <string name="audio_format_dolby_atmos">Dolby Atmos</string>
    <string name="no_snacks_selected">No snacks selected</string>
    <string name="back_button_desc">Back</string>
    <string name="menu_button_desc">Menu</string>
    <string name="movie_title_placeholder">Movie Title</string>
    <string name="select_items_title">Select Items</string>
    <string name="snacks_drinks_title">Snacks &amp; Drinks</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="item_name_placeholder">Item Name</string>
    <string name="item_desc_placeholder">Description</string>
    <string name="price_placeholder">PKR 0</string>
    <string name="booking_details_title">Booking Details</string>
    <string name="tickets_label">Tickets</string>
    <string name="snacks_label">Snacks</string>
    <string name="total_caps_label">TOTAL</string>
    <string name="send_ticket_button">Send Ticket</string>
    <string name="theater_icon_desc">Theater</string>
    <string name="hall_icon_desc">Hall</string>
    <string name="date_icon_desc">Date</string>
    <string name="time_icon_desc">Time</string>
    <string name="movie_poster_desc">Movie Poster</string>

    <string name="viewLastBooking">View Last Booking</string>
    <string name="lastBookingTitle">Last Booking</string>
    <string name="noPreviousBooking">No previous booking found.</string>
    <string name="comingSoonText">Coming Soon</string>
    <string name="watchTrailerText">Watch Trailer</string>
</resources>